refactor: simplify main and add PatientService skeleton